<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank_fragment_weather"
            android:textAlignment="center"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/UpdateWeatherBtn"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/UpdateWeatherBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/update_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DescriptionWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="19sp"
            app:layout_constraintTop_toBottomOf="@id/Header"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/DescriptionWeather"/>

        <TextView
            android:id="@+id/VisibilityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            android:textSize="19sp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="6dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/VisibilityHeader"/>

        <TextView
            android:id="@+id/CityText"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/visibility"/>

        <ViewAnimator
            android:id="@+id/AnimationWeather"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/CityText"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/AnimationWeather">
            <TableRow>
                <TextView
                    android:id="@+id/HeaderTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textSize="19sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fact_temp"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/feels_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_min"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/temp_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_max"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/temp_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/HeaderWind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="19sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deg"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_marginStart="70dp"
                    android:id="@+id/deg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14sp"/>
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>